

class Config:
    def __init__(self):
        self._letters = None
        self._lower_list = None
        self._medium_list = None
        self._advanced_list = None
        self._color_change = None
        self._key_color = None
        self._random_char_config = None
