from grade import Grade
from music import Music
from score import Score
from seplit_line import SeplitLine


class GameWindow:
    def __init__(self):
        # TODO define the parameters : 
        self.grade = Grade()
        # TODO define the parameters : 
        self.score = Score()
        # TODO you should add Ball elements in the list up to 2 elements
        self.balls = []
        # TODO define the parameters : 
        self.seplit_line = SeplitLine()
        # TODO define the parameters : 
        self.music = Music()
        # TODO you should add Button elements in the list
        self.buttons = []
        # TODO you should add GameChar elements in the list
        self.game_chars = []

    def _create_grade(self, ):
        # TODO : Complete method content
        pass

    def _create_score(self, ):
        # TODO : Complete method content
        pass

    def _create_game_char(self, ):
        # TODO : Complete method content
        pass

    def _create_ball(self, ):
        # TODO : Complete method content
        pass

    def _create_red_line(self, ):
        # TODO : Complete method content
        pass

    def _creat_button(self, ):
        # TODO : Complete method content
        pass

    def _play_music(self, ):
        # TODO : Complete method content
        pass
