

class Grade:
    def __init__(self):
        self._grade = None

    def get_grade(self, ):
        # TODO : Complete method content
        pass

    def add_grade(self, value):
        # TODO : Complete method content
        pass

    def sub_grade(self, value):
        # TODO : Complete method content
        pass
