class SeplitLine:
    def __init__(self):
        pass

    def _get_x(self, ):
        # TODO : Complete method content
        pass

    def _get_y(self, ):
        # TODO : Complete method content
        pass
